--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ ul {
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    margin: 15px;
 }
 
 .site-nav .link:hover,
