--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,6 @@ body {
 
 .list {
     list-style: none;
-    padding-left: 0;
-    margin: 0;
 }
 
 h1,
@@ -55,12 +53,12 @@ p {
 img {
     display: block;
     max-width: 100%;
-    width: 370px;
-    height: 294px;
+    height: auto;
 }
 
 ul {
-    list-style: none;
+    padding-left: 0;
+    margin: 0;
 }
 
 .header {
@@ -225,22 +223,20 @@ ul {
 
 /* Peculiarities */
 
-.feature {
-    padding-top: 67px;
+.section {
+    padding-top: 94px;
     padding-bottom: 94px;
 }
 
-.feature-list {
-        display: flex;
-    }
+/* .feature-list {
+    } */
 
 .feature-list .item {
-    width: 270px;
+    flex-basis: calc(100% / 4 - 30px);
 }
 
-.feature-list .item:not(:last-child) {
-    margin-right: 30px;
-}
+/* .feature-list .item:not(:last-child) {
+} */
 
 .feature-title {
     color: var(--title-text-color);
@@ -255,22 +251,29 @@ ul {
     line-height: 1.71;
 }
 
+.card-set {
+    display: flex;
+    flex-wrap: wrap; 
+    margin-left: -30px;
+    margin-top: -30px;
+}
+
+.card-item {
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
 /*What-do-we-specialize-in*/
 
-.section.do {
-    padding-bottom: 94px;
-    display: flex;
+.do {
+    padding-top: 0;
 }
 
-.img-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -30px;
-}
+/* .img-list {
+} */
 
-.img-list > .item {
+.img-list .item {
     flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
 }
 
 /* .img-list .item:not(:last-child) {
@@ -280,20 +283,16 @@ ul {
 /* Team section */
 
 .section-team {
-    padding-top: 94px;
-    padding-bottom: 94px;
     background-color: var(--end-bg-color);
 }
 
-.team {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -30px;
-}
+/* .team {
+} */
 
 
 
 .team .item {
+    flex-basis: calc(100% / 4 - 30px);
     background-color: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -303,11 +302,6 @@ ul {
 .team-list {
     padding-top: 30px;
     padding-bottom: 30px;
-}
-
-.team > .item {
-    flex-basis: calc(100% / 4 - 30px);
-    margin-right: 30px;
 }
 
 .team-name {
@@ -330,9 +324,9 @@ ul {
     padding-bottom: 60px;
 }
 
-.address-top {
+/* .address-top {
 
-}
+} */
 
 .address {
     font-style: normal;
@@ -383,9 +377,9 @@ ul {
     margin-right: auto;
 }
 
-.button-primary {
+/* .button-primary {
    
-}
+} */
 
 .button-primary:hover,
 .button-primary:focus {
@@ -395,24 +389,8 @@ ul {
 
 /* Portfolio page */
 
-.project-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -50px;
-
-}
-
-.project-list > .project-item {
-    flex-basis: calc(100% / 3 - 50px);
-    margin-left: 30px;
-    margin-top: 50px;
-}
-
-.section-portfolio {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
+/* .project-list {
+} */
 
 .button-list {
     display: flex;
@@ -463,16 +441,7 @@ ul {
 }
 
 .project-item {
-    width: 370px;
-
-}
-
-.project-item:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
-
-.project-item:not(:nth-last-child(-n+3)) {
-    margin-bottom: 30px;
+    flex-basis: calc(100% / 3 - 30px);
 }
 
 .project-title {
